--- a/index.html
+++ b/index.html
@@ -254,9 +254,8 @@
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-app">App</li>
                 <li data-filter=".filter-card">CERTIFICATE</li>
-                <li data-filter=".filter-web">Web</li>
+                <li data-filter=".filter-web">PROJECTS</li>
               </ul>
             </div>
           </div>
@@ -304,7 +303,70 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <img
+                src="assets/img/portfolio/portfolio-7.jpg"
+                class="img-fluid"
+                alt=""
+              />
+              <div class="portfolio-info">
+                <h4>Junior Web Developer</h4>
+                <p>Certificate</p>
+                <a
+                  href="https://drive.google.com/file/d/1FdKUEESsEO5EYIjozvol1Pk5ISOtgEMy/view?usp=sharing"
+                  data-gallery="portfolioGallery"
+                  class="portfolio-lightbox preview-link"
+                  ><i class="bx bx-plus"></i
+                ></a>
+                <a class="details-link" title="More Details"
+                  ><i class="bx bx-link"></i
+                ></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <img
+                src="assets/img/portfolio/portfolio-8.jpg"
+                class="img-fluid"
+                alt=""
+              />
+              <div class="portfolio-info">
+                <h4>Introduction to Network</h4>
+                <p>Certificate</p>
+                <a
+                  href="https://drive.google.com/file/d/1eOvw8dlAkWj2COlm38W7lhChuXRYKNXW/view?usp=sharing"
+                  data-gallery="portfolioGallery"
+                  class="portfolio-lightbox preview-link"
+                  ><i class="bx bx-plus"></i
+                ></a>
+                <a class="details-link" title="More Details"
+                  ><i class="bx bx-link"></i
+                ></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <img
+                src="assets/img/portfolio/portfolio-9.jpg"
+                class="img-fluid"
+                alt=""
+              />
+              <div class="portfolio-info">
+                <h4>Database Design</h4>
+                <p>Certificate</p>
+                <a
+                  href="assets/img/portfolio/portfolio-9.jpg"
+                  data-gallery="portfolioGallery"
+                  class="portfolio-lightbox preview-link"
+                  ><i class="bx bx-plus"></i
+                ></a>
+                <a class="details-link" title="More Details"
+                  ><i class="bx bx-link"></i
+                ></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <img
                 src="assets/img/portfolio/portfolio-3.jpg"
                 class="img-fluid"
@@ -336,27 +398,6 @@
                 <p>Web</p>
                 <a
                   href="assets/img/portfolio/portfolio-2.jpg"
-                  data-gallery="portfolioGallery"
-                  class="portfolio-lightbox preview-link"
-                  ><i class="bx bx-plus"></i
-                ></a>
-                <a class="details-link" title="More Details"
-                  ><i class="bx bx-link"></i
-                ></a>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-              <img
-                src="assets/img/portfolio/portfolio-6.jpg"
-                class="img-fluid"
-                alt=""
-              />
-              <div class="portfolio-info">
-                <h4>Price List Diamond</h4>
-                <p>My Business</p>
-                <a
-                  href="assets/img/portfolio/portfolio-6.jpg"
                   data-gallery="portfolioGallery"
                   class="portfolio-lightbox preview-link"
                   ><i class="bx bx-plus"></i
